k8s/django/django.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: otto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app-container
          image: jusdevottoaacr.azurecr.io/otto:latest
          imagePullPolicy: Always # IfNotPresent in PROD
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: secrets
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: staticfiles-pv-storage
              mountPath: "/data/static"
            - name: media-pv-storage
              mountPath: "/data/media"
      volumes:
      - name: secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-keyvault"
      - name: staticfiles-pv-storage
        persistentVolumeClaim:
          claimName: staticfiles-pvc
      - name: media-pv-storage
        persistentVolumeClaim:
          claimName: media-pvc
                
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: otto
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: django-app
