k8s/django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otto-ingress
  namespace: otto
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: 199.212.215.11/32
    nginx.ingress.kubernetes.io/proxy-body-size: "51200m"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aks-otto.canadacentral.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: aks-otto.canadacentral.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
